syntax = "proto3";
option java_multiple_files = true;

package org.gprc.protodef.messages.helloservice;


message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

//defining the response
message HelloResponse {
  string greeting = 1;
}