syntax = "proto3";
option java_multiple_files = true;

package org.gprc.protodef.services.helloservice;

import "org/gprc/protodef/messages/helloservice/HelloMessages.proto";

service HelloService {
  rpc hello(org.gprc.protodef.messages.helloservice.HelloRequest) returns (org.gprc.protodef.messages.helloservice.HelloResponse);
}

